Closed Bug 1415908 Opened 7 years ago Closed 6 years ago

Intermittent browser/components/extensions/test/browser/test-oop-extensions/browser_ext_omnibox.js | uncaught exception - NS_ERROR_FAILURE: Component returned failure code: 0x80004005 (NS_ERROR_FAILURE) [nsIAutoCompleteController.getCommentAt] at _appendC

Categories

(WebExtensions :: General, defect, P2)

defect

Tracking

(firefox58 fixed, firefox59 fixed)

RESOLVED FIXED
mozilla59
Tracking Status
firefox58 --- fixed
firefox59 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: mak)

References

Details

(Keywords: intermittent-failure, Whiteboard: [stockwell fixed:product][fxsearch])

Attachments

(1 file)

I'll see if I can figure out what's up.
Assignee: nobody → mak77
Status: NEW → ASSIGNED
Flags: needinfo?(mak77)
See Also: → 1416142, 1407890, 1416103
In the past 7 days there are 53 failures, mostly on all platforms and build types.
Recent log example: https://treeherder.mozilla.org/logviewer.html#?repo=mozilla-central&job_id=144140267
Here is some context from the log:
23:14:23     INFO -  296 INFO TEST-START | browser/components/extensions/test/browser/test-oop-extensions/browser_ext_omnibox.js
28408
23:14:23     INFO -  GECKO(4748) | [Parent 4748, Main Thread] WARNING: Unsupported TextureClient backend type: 'aMoz2DBackend != gfx::BackendType::SKIA && aMoz2DBackend != gfx::BackendType::DIRECT2D && aMoz2DBackend != gfx::BackendType::DIRECT2D1_1', file z:/build/build/src/gfx/layers/client/TextureClient.cpp, line 1255
28409
23:14:23     INFO -  GECKO(4748) | [Parent 4748, Main Thread] WARNING: NS_ENSURE_SUCCESS(rv, rv) failed with result 0x80040111: file z:/build/build/src/netwerk/protocol/res/SubstitutingProtocolHandler.cpp, line 333
28410
23:14:23     INFO -  GECKO(4748) | ++DOCSHELL 1B8B4C00 == 26 [pid = 4748] [id = {59e7db00-5281-408b-bddd-bf9c694089b0}]
28411
23:14:23     INFO -  GECKO(4748) | ++DOMWINDOW == 116 (2B9E8800) [pid = 4748] [serial = 620] [outer = 00000000]
28412
23:14:23     INFO -  GECKO(4748) | ++DOMWINDOW == 117 (2B9F3C00) [pid = 4748] [serial = 621] [outer = 2B9E8800]
28413
23:14:23     INFO -  GECKO(4748) | ++DOMWINDOW == 118 (2CDD1000) [pid = 4748] [serial = 622] [outer = 2B9E8800]
28414
23:14:23     INFO -  GECKO(4748) | ++DOMWINDOW == 119 (2DF68800) [pid = 4748] [serial = 623] [outer = 2B9E8800]
28415
23:14:23     INFO -  GECKO(4748) | [Parent 4748, Main Thread] WARNING: Need TabChild to get the nativeWindow from!: file z:/build/build/src/widget/PuppetWidget.cpp, line 1173
28416
23:14:23     INFO -  GECKO(4748) | ++DOCSHELL 0592AC00 == 9 [pid = 1624] [id = {ff2edbc4-c0d0-447a-8183-b7328f8382a0}]
28417
23:14:23     INFO -  GECKO(4748) | ++DOMWINDOW == 45 (0592B400) [pid = 1624] [serial = 673] [outer = 00000000]
28418
23:14:23     INFO -  GECKO(4748) | [Child 1624, Main Thread] WARNING: Fallback to BasicLayerManager: file z:/build/build/src/dom/ipc/TabChild.cpp, line 2945
28419
23:14:23     INFO -  GECKO(4748) | ++DOMWINDOW == 46 (0595BC00) [pid = 1624] [serial = 674] [outer = 0592B400]
28420
23:14:23     INFO -  GECKO(4748) | ++DOMWINDOW == 47 (05930400) [pid = 1624] [serial = 675] [outer = 0592B400]
28421
23:14:23     INFO -  GECKO(4748) | [Parent 4748, Main Thread] WARNING: '!staticSink->EnsureInitActiveTIPKeyboard()', file z:/build/build/src/widget/windows/TSFTextStore.cpp, line 1089
28422
23:14:23     INFO -  GECKO(4748) | [Parent 4748, Main Thread] WARNING: '!staticSink->EnsureInitActiveTIPKeyboard()', file z:/build/build/src/widget/windows/TSFTextStore.cpp, line 1091
28423
23:14:23     INFO -  GECKO(4748) | [Parent 4748, Main Thread] WARNING: Unsupported TextureClient backend type: 'aMoz2DBackend != gfx::BackendType::SKIA && aMoz2DBackend != gfx::BackendType::DIRECT2D && aMoz2DBackend != gfx::BackendType::DIRECT2D1_1', file z:/build/build/src/gfx/layers/client/TextureClient.cpp, line 1255
28424
23:14:23     INFO -  GECKO(4748) | [Parent 4748, Main Thread] WARNING: Unsupported TextureClient backend type: 'aMoz2DBackend != gfx::BackendType::SKIA && aMoz2DBackend != gfx::BackendType::DIRECT2D && aMoz2DBackend != gfx::BackendType::DIRECT2D1_1', file z:/build/build/src/gfx/layers/client/TextureClient.cpp, line 1255
28425
23:14:23     INFO -  GECKO(4748) | [Parent 4748, Main Thread] WARNING: Unsupported TextureClient backend type: 'aMoz2DBackend != gfx::BackendType::SKIA && aMoz2DBackend != gfx::BackendType::DIRECT2D && aMoz2DBackend != gfx::BackendType::DIRECT2D1_1', file z:/build/build/src/gfx/layers/client/TextureClient.cpp, line 1255
28426
23:14:23     INFO -  GECKO(4748) | [Parent 4748, Main Thread] WARNING: Unsupported TextureClient backend type: 'aMoz2DBackend != gfx::BackendType::SKIA && aMoz2DBackend != gfx::BackendType::DIRECT2D && aMoz2DBackend != gfx::BackendType::DIRECT2D1_1', file z:/build/build/src/gfx/layers/client/TextureClient.cpp, line 1255
28427
23:14:23     INFO -  GECKO(4748) | [Parent 4748, Main Thread] WARNING: Unsupported TextureClient backend type: 'aMoz2DBackend != gfx::BackendType::SKIA && aMoz2DBackend != gfx::BackendType::DIRECT2D && aMoz2DBackend != gfx::BackendType::DIRECT2D1_1', file z:/build/build/src/gfx/layers/client/TextureClient.cpp, line 1255
28428
23:14:23     INFO -  GECKO(4748) | [Parent 4748, Main Thread] WARNING: Unsupported TextureClient backend type: 'aMoz2DBackend != gfx::BackendType::SKIA && aMoz2DBackend != gfx::BackendType::DIRECT2D && aMoz2DBackend != gfx::BackendType::DIRECT2D1_1', file z:/build/build/src/gfx/layers/client/TextureClient.cpp, line 1255
28429
23:14:23     INFO -  GECKO(4748) | [Parent 4748, Main Thread] WARNING: Unsupported TextureClient backend type: 'aMoz2DBackend != gfx::BackendType::SKIA && aMoz2DBackend != gfx::BackendType::DIRECT2D && aMoz2DBackend != gfx::BackendType::DIRECT2D1_1', file z:/build/build/src/gfx/layers/client/TextureClient.cpp, line 1255
28430
23:14:23     INFO -  GECKO(4748) | [Parent 4748, Main Thread] WARNING: Unsupported TextureClient backend type: 'aMoz2DBackend != gfx::BackendType::SKIA && aMoz2DBackend != gfx::BackendType::DIRECT2D && aMoz2DBackend != gfx::BackendType::DIRECT2D1_1', file z:/build/build/src/gfx/layers/client/TextureClient.cpp, line 1255
28431
23:14:23     INFO -  GECKO(4748) | [Parent 4748, Main Thread] WARNING: Unsupported TextureClient backend type: 'aMoz2DBackend != gfx::BackendType::SKIA && aMoz2DBackend != gfx::BackendType::DIRECT2D && aMoz2DBackend != gfx::BackendType::DIRECT2D1_1', file z:/build/build/src/gfx/layers/client/TextureClient.cpp, line 1255
28432
23:14:23     INFO -  GECKO(4748) | [Parent 4748, Main Thread] WARNING: Unsupported TextureClient backend type: 'aMoz2DBackend != gfx::BackendType::SKIA && aMoz2DBackend != gfx::BackendType::DIRECT2D && aMoz2DBackend != gfx::BackendType::DIRECT2D1_1', file z:/build/build/src/gfx/layers/client/TextureClient.cpp, line 1255
28433
23:14:23     INFO -  GECKO(4748) | [Parent 4748, Main Thread] WARNING: Unsupported TextureClient backend type: 'aMoz2DBackend != gfx::BackendType::SKIA && aMoz2DBackend != gfx::BackendType::DIRECT2D && aMoz2DBackend != gfx::BackendType::DIRECT2D1_1', file z:/build/build/src/gfx/layers/client/TextureClient.cpp, line 1255
28434
23:14:23     INFO -  GECKO(4748) | [Parent 4748, Main Thread] WARNING: Unsupported TextureClient backend type: 'aMoz2DBackend != gfx::BackendType::SKIA && aMoz2DBackend != gfx::BackendType::DIRECT2D && aMoz2DBackend != gfx::BackendType::DIRECT2D1_1', file z:/build/build/src/gfx/layers/client/TextureClient.cpp, line 1255
28435
23:14:23     INFO -  GECKO(4748) | [Parent 4748, Main Thread] WARNING: Unsupported TextureClient backend type: 'aMoz2DBackend != gfx::BackendType::SKIA && aMoz2DBackend != gfx::BackendType::DIRECT2D && aMoz2DBackend != gfx::BackendType::DIRECT2D1_1', file z:/build/build/src/gfx/layers/client/TextureClient.cpp, line 1255
28436
23:14:23     INFO -  GECKO(4748) | [Parent 4748, Main Thread] WARNING: NS_ENSURE_TRUE(searchIndex >= 0 && *aRowIndex >= 0) failed: file z:/build/build/src/toolkit/components/autocomplete/nsAutoCompleteController.cpp, line 776
28437
23:14:23     INFO -  GECKO(4748) | [Parent 4748, Main Thread] WARNING: NS_ENSURE_SUCCESS(rv, rv) failed with result 0x80004005: file z:/build/build/src/toolkit/components/autocomplete/nsAutoCompleteController.cpp, line 2015
28438
23:14:23     INFO -  GECKO(4748) | [Parent 4748, Main Thread] WARNING: NS_ENSURE_TRUE(searchIndex >= 0 && *aRowIndex >= 0) failed: file z:/build/build/src/toolkit/components/autocomplete/nsAutoCompleteController.cpp, line 776
28439
23:14:23     INFO -  GECKO(4748) | [Parent 4748, Main Thread] WARNING: NS_ENSURE_SUCCESS(rv, rv) failed with result 0x80004005: file z:/build/build/src/toolkit/components/autocomplete/nsAutoCompleteController.cpp, line 2015
28440
23:14:23     INFO -  GECKO(4748) | [Parent 4748, Main Thread] WARNING: NS_ENSURE_TRUE(searchIndex >= 0 && *aRowIndex >= 0) failed: file z:/build/build/src/toolkit/components/autocomplete/nsAutoCompleteController.cpp, line 776
28441
23:14:23     INFO -  GECKO(4748) | [Parent 4748, Main Thread] WARNING: NS_ENSURE_SUCCESS(rv, rv) failed with result 0x80004005: file z:/build/build/src/toolkit/components/autocomplete/nsAutoCompleteController.cpp, line 805
28442
23:14:24     INFO -  TEST-INFO | started process screenshot
28443
23:14:24     INFO -  TEST-INFO | screenshot: exit 0
28444
23:14:24     INFO -  Buffered messages logged at 23:14:23
28445
23:14:24     INFO -  297 INFO Entering test bound
28446
23:14:24     INFO -  298 INFO Extension loaded
28447
23:14:24     INFO -  299 INFO Console message: Warning: attempting to write 8627 bytes to preference extensions.webextensions.uuids. This is bad for general performance and memory usage. Such an amount of data should rather be written to an external file. This preference will not be sent to any content processes.
28448
23:14:24     INFO -  Buffered messages finished
28449
23:14:24    ERROR -  300 INFO TEST-UNEXPECTED-FAIL | browser/components/extensions/test/browser/test-oop-extensions/browser_ext_omnibox.js | uncaught exception - NS_ERROR_FAILURE: Component returned failure code: 0x80004005 (NS_ERROR_FAILURE) [nsIAutoCompleteController.getCommentAt] at _appendCurrentResult@chrome://global/content/bindings/autocomplete.xml:1296:27
28450
23:14:24     INFO -  _invalidate@chrome://global/content/bindings/autocomplete.xml:1155:11
28451
23:14:24     INFO -  _openAutocompletePopup@chrome://browser/content/urlbarBindings.xml:1928:11
28452
23:14:24     INFO -  openAutocompletePopup@chrome://browser/content/urlbarBindings.xml:1841:11
28453
23:14:24     INFO -  openPopup@chrome://global/content/bindings/autocomplete.xml:385:13
28454
23:14:24     INFO -  set_popupOpen@chrome://global/content/bindings/autocomplete.xml:95:10
28455
23:14:24     INFO -  onInput@chrome://browser/content/urlbarBindings.xml:1336:17
28456
23:14:24     INFO -  onxblinput@chrome://global/content/bindings/autocomplete.xml:622:9
28457
23:14:24     INFO -  synthesizeKey@chrome://mochikit/content/tests/SimpleTest/EventUtils.js:922:7
28458
23:14:24     INFO -  testInputEvents@chrome://mochitests/content/browser/browser/components/extensions/test/browser/test-oop-extensions/browser_ext_omnibox.js:143:7
28459
23:14:24     INFO -  async*@chrome://mochitests/content/browser/browser/components/extensions/test/browser/test-oop-extensions/browser_ext_omnibox.js:264:9
28460
23:14:24     INFO -  Async*Tester_execTest/<@chrome://mochikit/content/browser-test.js:1060:21
28461
23:14:24     INFO -  TaskImpl_run@resource://gre/modules/Task.jsm:331:42
28462
23:14:24     INFO -  TaskImpl@resource://gre/modules/Task.jsm:280:3
28463
23:14:24     INFO -  asyncFunction@resource://gre/modules/Task.jsm:252:14
28464
23:14:24     INFO -  Task_spawn@resource://gre/modules/Task.jsm:166:12
28465
23:14:24     INFO -  Tester_execTest@chrome://mochikit/content/browser-test.js:1051:9
28466
23:14:24     INFO -  Tester.prototype.nextTest</<@chrome://mochikit/content/browser-test.js:951:9
28467
23:14:24     INFO -  SimpleTest.waitForFocus/waitForFocusInner/focusedOrLoaded/<@chrome://mochikit/content/tests/SimpleTest/SimpleTest.js:795:59
28468
23:14:24     INFO -  Stack trace

:andym Could you please take a look?
Flags: needinfo?(amckay)
I have a patch on Try that apprently fixes this specific error, but doesn't fix bug 1416103, nor bug 1416142.
Though, I must do some additional manual regression testing today, then I'll attach it.
Flags: needinfo?(amckay)
Comment on attachment 8930418 [details]
Bug 1415908 - Intermittent failure (nsIAutoCompleteController.getCommentAt) in browser_ext_omnibox.js.

https://reviewboard.mozilla.org/r/201590/#review207152

::: toolkit/components/autocomplete/nsAutoCompleteController.cpp:880
(Diff revision 1)
> -NS_IMETHODIMP
>  nsAutoCompleteController::OnSearchResult(nsIAutoCompleteSearch *aSearch, nsIAutoCompleteResult* aResult)
>  {
>    MOZ_ASSERT(mSearchesOngoing > 0 && mSearches.Contains(aSearch));
>  
> -  // If this is the first search result we are processing
> +  // Clear the previous matches if necessary.

This comment isn't quite right I think?  No matches are being cleared, at least not here.

::: toolkit/components/autocomplete/nsAutoCompleteController.cpp:1726
(Diff revision 1)
>    nsCOMPtr<nsIAutoCompleteInput> input(mInput);
>  
>    uint32_t minResults;
>    input->GetMinResultsForPopup(&minResults);
>  
> +  // Apply a pending rowCountChanged eventually.

"Eventually" is confusing here.  It makes it sound like the notification will be sent at some later time, but it's happening right now.

::: toolkit/components/autocomplete/nsAutoCompleteController.cpp:1728
(Diff revision 1)
>    uint32_t minResults;
>    input->GetMinResultsForPopup(&minResults);
>  
> +  // Apply a pending rowCountChanged eventually.
> +  if (mTree && mDelayedRowCountDelta != 0) {
> +    mTree->RowCountChanged(0, mDelayedRowCountDelta);

You don't need to zero out mDelayedRowCountDelta at this point because the search is done, correct?
Attachment #8930418 - Flags: review?(adw) → review+
Pushed by mak77@bonardo.net:
https://hg.mozilla.org/integration/autoland/rev/ab201316ebfd
Intermittent failure (nsIAutoCompleteController.getCommentAt) in browser_ext_omnibox.js. r=adw
https://hg.mozilla.org/mozilla-central/rev/ab201316ebfd
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla59
Please request Beta approval on this.
Flags: needinfo?(mak77)
(In reply to (PTO - Back 27-Nov) Ryan VanderMeulen [:RyanVM] from comment #12)
> Please request Beta approval on this.

I want to let it bake a bit in Nightly first, it's not free of risks.
Flags: needinfo?(mak77)
Priority: -- → P2
Whiteboard: [stockwell needswork:owner] → [stockwell needswork:owner][fxsearch]
all failures since the fix landed are on mozilla-beta.
Whiteboard: [stockwell needswork:owner][fxsearch] → [stockwell fixed:product][fxsearch]
Comment on attachment 8930418 [details]
Bug 1415908 - Intermittent failure (nsIAutoCompleteController.getCommentAt) in browser_ext_omnibox.js.

Approval Request Comment
[Feature/Bug causing the regression]: no regression
[User impact if declined]: very frequent intermittent
[Is this code covered by automated tests?]: no
[Has the fix been verified in Nightly?]: yes
[Needs manual test from QE? If yes, steps to reproduce]: no
[List of other uplifts needed for the feature/fix]: none
[Is the change risky?]: It's not free of risks, but one week of baking in Nightly didn't report issues
[Why is the change risky/not risky?]: there may be edge cases we didn't notice yet
[String changes made/needed]: none
Attachment #8930418 - Flags: approval-mozilla-beta?
> [Is this code covered by automated tests?]: no

Well, this is not completely true, autocomplete IS covered by tests, just this tiny details it not covered cause it's very timing sensitive.
Comment on attachment 8930418 [details]
Bug 1415908 - Intermittent failure (nsIAutoCompleteController.getCommentAt) in browser_ext_omnibox.js.

Fix an intermitten failure. Let's take it in Beta58.
Attachment #8930418 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
Product: Toolkit → WebExtensions
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: